[package]
name = "matrix_merchant"
description = "A simple parsing library for the matrix market (.mtx) file format"
keywords = ["matrix_market", "mtx", "matrix", "parser"]
readme = "readme.md"
repository = "https://github.com/EsotericPyramid/matrix_market.git"
license = "MIT"
version = "0.1.0"
edition = "2024"

[dependencies]
num-complex = "=0.4.6"